Consumo de API login y register

--- a/Front/login.html
+++ b/Front/login.html
@@ -6,7 +6,7 @@
   <title>ACTIVATE | Log in</title>
 
   <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"> -->
   <!-- Font Awesome -->
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- icheck bootstrap -->
@@ -26,7 +26,7 @@
 
       <form action="" method="post" id="formulario">
         <div class="input-group mb-3">
-          <input type="email" class="form-control" id="correo" placeholder="Correo" required>
+          <input type="email" class="form-control" id="mail" placeholder="Correo" required>
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-envelope"></span>
@@ -34,7 +34,7 @@
           </div>
         </div>
         <div class="input-group mb-3">
-          <input type="password" class="form-control" id="contrasenia" placeholder="Contraseña" required>
+          <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
           <div class="input-group-append">
             <div class="input-group-text">
               <span class="fas fa-lock"></span>
