--- a/Front/profile.html
+++ b/Front/profile.html
@@ -8,8 +8,7 @@
   <title>Document</title>
 
   <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
@@ -19,7 +18,7 @@
   <link rel="stylesheet" href="src/css/profile.css">
 
   <!-- daterange picker -->
-  <link rel="stylesheet" href="../../plugins/daterangepicker/daterangepicker.css">
+  <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
 
 
 
@@ -466,9 +465,9 @@
   <script src="dist/js/adminlte.min.js"></script>
 
   <!-- InputMask -->
-  <script src="../../plugins/moment/moment.min.js"></script>
+  <script src="plugins/moment/moment.min.js"></script>
   <!-- date-range-picker -->
-  <script src="../../plugins/daterangepicker/daterangepicker.js"></script>
+  <script src="plugins/daterangepicker/daterangepicker.js"></script>
   <!-- Page specific script -->
   <script>
     $(function () {
