Consumo de APIs para el perfil de usuario, y lista de eventos

--- a/Front/event.html
+++ b/Front/event.html
@@ -30,8 +30,7 @@
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="profile.html"><button type="button" class="btn btn-block bg-gradient-primary">Atras</button></a>
-          
+          <a href="profile.html"><button type="button" class="btn btn-block bg-gradient-primary" id="goBack">Atras</button></a>
         </li>
       </ul>
 
@@ -255,9 +254,9 @@
   <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- AdminLTE App -->
   <script src="dist/js/adminlte.min.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <!-- <script src="dist/js/demo.js"></script> -->
 
+  <!-- Recursos -->
+  <script src="src/js/event.js"></script>
 </body>
 
 </html>
