--- a/Front/profile.html
+++ b/Front/profile.html
@@ -168,7 +168,7 @@
               <div class="card card-primary card-outline">
                 <div class="card-body box-profile">
                   <div class="text-center">
-                    <img class="profile-user-img img-fluid img-circle" src="dist/img/user4-128x128.jpg"
+                    <img class="profile-user-img img-fluid img-circle" id="userImg" src=""
                       alt="User profile picture">
                   </div>
 
