Ya esta todo falta las imagenes

--- a/Front/event.html
+++ b/Front/event.html
@@ -205,11 +205,11 @@
                 </div>
                 <!-- /.card-footer -->
                 <div class="card-footer">
-                  <form action="#" method="post">
+                  <form method="post" id="form">
                     <img class="img-fluid img-circle img-sm" id="userLoginImg" src="" alt="Alt Text">
                     <!-- .img-push is used to add margin to elements next to floating images -->
                     <div class="img-push">
-                      <input type="text" class="form-control form-control-sm" placeholder="Press enter to post comment">
+                      <input type="text" class="form-control form-control-sm" id="cajaComentario" placeholder="Presiona enter para comentar">
                     </div>
                   </form>
                 </div>
