--- a/Front/register.html
+++ b/Front/register.html
@@ -99,8 +99,17 @@
 <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- AdminLTE App -->
 <script src="dist/js/adminlte.min.js"></script>
+<!-- bs-custom-file-input -->
+<script src="plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
 
 <!-- Recursos -->
 <script src="src/js/register.js"></script>
+
+<!-- Page specific script for file picker-->
+<script>
+  $(function () {
+    bsCustomFileInput.init();
+  });
+</script>
 </body>
 </html>
