--- a/Front/profile.html
+++ b/Front/profile.html
@@ -224,9 +224,10 @@
               <div class="card">
                 <div class="card-header p-2">
                   <ul class="nav nav-pills">
-                    <li class="nav-item"><a class="nav-link active" href="#activity" data-toggle="tab">Eventos</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#activity" data-toggle="tab">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="#timeline" data-toggle="tab">Crear</a></li>
                     <li class="nav-item"><a class="nav-link" href="#settings" data-toggle="tab">Cuenta</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#misEventos" data-toggle="tab">Mis eventos</a></li>
                   </ul>
                 </div><!-- /.card-header -->
 
@@ -345,7 +346,7 @@
                           </div>
                           <!-- /.card-header -->
                           <!-- form start -->
-                          <form action="" method="post" id="eventForm">
+                          <form action="" method="post" enctype="multipart/form-data" id="eventForm">
                             <div class="card-body">
                               <div class="form-group">
                                 <label for="exampleInputEmail1">Titulo</label>
@@ -359,11 +360,22 @@
                               <div class="form-group">
                                 <label>Ciudad</label>
                                 <select class="custom-select" id="input_ubicacion">
-                                  <option>option 1</option>
+                                  <!-- <option>option 1</option>
                                   <option>option 2</option>
                                   <option>option 3</option>
                                   <option>option 4</option>
-                                  <option>option 5</option>
+                                  <option>option 5</option> -->
+                                </select>
+                              </div>
+
+                              <div class="form-group">
+                                <label>Categoria</label>
+                                <select class="custom-select" id="input_categoria">
+                                  <!-- <option>option 1</option>
+                                  <option>option 2</option>
+                                  <option>option 3</option>
+                                  <option>option 4</option>
+                                  <option>option 5</option> -->
                                 </select>
                               </div>
 
@@ -439,6 +451,33 @@
                     </div>
                     <!-- /.tab-pane -->
 
+
+                    <!-- tab-pane -->
+                    <div class="tab-pane" id="misEventos">
+
+                      <!-- card -->
+                        <!-- /.card-header -->
+                        <div class="card-body">
+                          <table id="example1" class="table table-bordered table-striped">
+                            <thead>
+                              <tr>
+                                <th>ID</th>
+                                <th>TITULO</th>
+                                <th>CIUDAD</th>
+                                <th>FECHA INICIO</th>
+                                <th>FECHA FIN</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                      
+                      
+                          </table>
+                        </div>
+                        <!-- /.card-body -->
+
+                    </div>
+                    <!-- /.tab-pane -->
+
                   </div>
                   <!-- /.tab-content -->
                 </div><!-- /.card-body -->
@@ -469,9 +508,24 @@
   <!-- bs-custom-file-input -->
   <script src="plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
 
+  <!-- DataTables  & Plugins -->
+<script src="plugins/datatables/jquery.dataTables.min.js"></script>
+<script src="plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+<script src="plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+<script src="plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+<script src="plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+<script src="plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+<script src="plugins/jszip/jszip.min.js"></script>
+<script src="plugins/pdfmake/pdfmake.min.js"></script>
+<script src="plugins/pdfmake/vfs_fonts.js"></script>
+<script src="plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+<script src="plugins/datatables-buttons/js/buttons.print.min.js"></script>
+<script src="plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+
   <!-- Recursos -->
   <script src="src/js/profile.js"></script>
   <script src="src/js/createEvent.js"></script>
+  <script src="src/js/registeredEvents.js"></script>
 
   <!-- Page specific script for time picker-->
   <script>
@@ -491,6 +545,26 @@
   <script>
     $(function () {
       bsCustomFileInput.init();
+    });
+  </script>
+
+
+  <!-- Page specific script for dataTable of Registered Events -->
+  <script>
+    $(function () {
+      $("#example1").DataTable({
+        "responsive": true, "lengthChange": false, "autoWidth": false,
+        "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+      }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+      $('#example2').DataTable({
+        "paging": true,
+        "lengthChange": false,
+        "searching": false,
+        "ordering": true,
+        "info": true,
+        "autoWidth": false,
+        "responsive": true,
+      });
     });
   </script>
 
