--- a/Front/login.html
+++ b/Front/login.html
@@ -47,7 +47,12 @@
           </div>
           <!-- /.col -->
           <div class="col-4">
-            <button type="submit" class="btn btn-primary btn-block">Iniciar</button>
+
+            <!-- <button type="submit" class="btn btn-primary btn-block">Iniciar</button> -->
+            <a onclick="iniciarSesion()" href="#" class="btn btn-primary btn-user btn-block">
+              Iniciar
+            </a>
+
           </div>
           <!-- /.col -->
         </div>
