--- a/Front/event.html
+++ b/Front/event.html
@@ -150,7 +150,7 @@
               <div class="card card-widget">
                 <div class="card-header">
                   <div class="user-block">
-                    <img class="img-circle" id="userImg" src="" alt="User Image">
+                    <img class="img-circle" id="userImg" src="" alt="X">
                     <span id="user_name" class="username"><a href="#">  </a></span>
                     <span id="calendar_event" class="description"></span>
                     <span id="ubication_event" class="description"></span>
@@ -206,7 +206,7 @@
                 <!-- /.card-footer -->
                 <div class="card-footer">
                   <form method="post" id="form">
-                    <img class="img-fluid img-circle img-sm" id="userLoginImg" src="" alt="Alt Text">
+                    <img class="img-fluid img-circle img-sm" id="userLoginImg" src="" alt="U">
                     <!-- .img-push is used to add margin to elements next to floating images -->
                     <div class="img-push">
                       <input type="text" class="form-control form-control-sm" id="cajaComentario" placeholder="Presiona enter para comentar">
