Ver un perfil especifico

--- a/Front/user-profile.html
+++ b/Front/user-profile.html
@@ -159,7 +159,7 @@
                   </li>
                 </ul>
 
-                <a href="login.html" class="btn btn-primary btn-block" id="closeSession"><b>Cerrar Sesion</b></a>
+                <a href="login.html" class="btn btn-primary btn-block" id="closeSession"><b>Follow</b></a>
               </div>
               <!-- /.card-body -->
             </div>
