Follow user sin terminar

--- a/Front/user-profile.html
+++ b/Front/user-profile.html
@@ -158,8 +158,7 @@
                     <b>Siguiendo</b> <a class="float-right">543</a>
                   </li>
                 </ul>
-
-                <a href="login.html" class="btn btn-primary btn-block" id="closeSession"><b>Follow</b></a>
+                <a class="btn btn-primary btn-block" id="followbtn"><b id="followtxt"></b></a>
               </div>
               <!-- /.card-body -->
             </div>
