Numero de seguidores y seguidos implementado en la vista

--- a/Front/profile.html
+++ b/Front/profile.html
@@ -175,10 +175,10 @@
 
                   <ul class="list-group list-group-unbordered mb-3">
                     <li class="list-group-item">
-                      <b>Seguidores</b> <a class="float-right">1,322</a>
+                      <b>Seguidores</b> <a class="float-right" id="followers">null</a>
                     </li>
                     <li class="list-group-item">
-                      <b>Siguiendo</b> <a class="float-right">543</a>
+                      <b>Siguiendo</b> <a class="float-right" id="following">null</a>
                     </li>
                   </ul>
 
