Validate HTML and js

--- a/Front/event.html
+++ b/Front/event.html
@@ -30,7 +30,7 @@
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="profile.html"><button type="button" class="btn btn-block bg-gradient-primary" id="goBack">Atras</button></a>
+          <button onclick="location.href='profile.html'" type="button" class="btn btn-block bg-gradient-primary" id="goBack">Atras</button>
         </li>
       </ul>
 
@@ -231,7 +231,7 @@
 
           <div class="contenedor-evento">
             <div class="row float-right">
-              <a href="PQRS.html"><button  type="button" class="btn btn-block bg-gradient-danger btn-xs">Reportar</button></a>
+              <button onclick="location.href='PQRS.html'" type="button" class="btn btn-block bg-gradient-danger btn-xs">Reportar</button>
             </div>
           </div>
           <!-- /.row -->
