--- a/Front/login.html
+++ b/Front/login.html
@@ -24,7 +24,7 @@
     <div class="card-body">
       <p class="login-box-msg">Inicio de Sesion</p>
 
-      <form action="" method="post" id="formulario">
+      <form method="post" id="formulario">
         <div class="input-group mb-3">
           <input type="email" class="form-control" id="mail" placeholder="Correo" required>
           <div class="input-group-append">
