--- a/Front/user-profile.html
+++ b/Front/user-profile.html
@@ -30,8 +30,8 @@
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="profile.html"><button type="button" class="btn btn-block bg-gradient-primary"
-              id="goBack">Atras</button></a>
+          <button onclick="location.href='profile.html'" type="button" class="btn btn-block bg-gradient-primary"
+              id="goBack">Atras</button>
         </li>
       </ul>
 
