--- a/Front/PQRS.html
+++ b/Front/PQRS.html
@@ -32,7 +32,7 @@
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="event.html"><button type="button" class="btn btn-block bg-gradient-primary" id="goBack">Atras</button></a>
+          <button onclick="location.href='event.html'" type="button" class="btn btn-block bg-gradient-primary" id="goBack">Atras</button>
         </li>
       </ul>
 
