--- a/Front/edit-event.html
+++ b/Front/edit-event.html
@@ -32,7 +32,7 @@
       <!-- Left navbar links -->
       <ul class="navbar-nav">
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="event.html"><button type="button" class="btn btn-block bg-gradient-primary" id="goBack">Atras</button></a>
+          <button onclick="location.href='event.html'" type="button" class="btn btn-block bg-gradient-primary" id="goBack">Atras</button>
         </li>
       </ul>
 
@@ -157,14 +157,14 @@
                 </div>
                 <!-- /.card-header -->
                 <!-- form start -->
-                <form action="" method="post" enctype="multipart/form-data" id="eventForm">
+                <form method="post" enctype="multipart/form-data" id="eventForm">
                   <div class="card-body">
                     <div class="form-group">
-                      <label for="exampleInputEmail1">Titulo</label>
+                      <label>Titulo</label>
                       <input type="text" class="form-control" id="input_titulo" placeholder="Titulo" required>
                     </div>
                     <div class="form-group">
-                      <label for="exampleInputPassword1">Descripcion</label>
+                      <label>Descripcion</label>
                       <input type="text" class="form-control" id="input_descripcion" placeholder="Descripcion" required>
                     </div>
 
@@ -205,11 +205,11 @@
                     <!-- /.form group -->
                             
                     <div class="form-group">
-                      <label for="exampleInputFile">Imagen</label>
+                      <label>Imagen</label>
                       <div class="input-group">
                         <div class="custom-file">
                           <input type="file" class="custom-file-input" id="input_img">
-                          <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+                          <label class="custom-file-label">Choose file</label>
                         </div>
                         <div class="input-group-append">
                           <span class="input-group-text">Upload</span>
