--- a/Front/register.html
+++ b/Front/register.html
@@ -23,7 +23,7 @@
     <div class="card-body">
       <p class="login-box-msg">Crea una nueva cuenta</p>
 
-      <form action="" method="post" id="formulario">
+      <form method="post" id="formulario">
         <div class="input-group mb-3">
           <input type="text" class="form-control" id="name" placeholder="Nombre" required>
           <div class="input-group-append">
@@ -66,11 +66,11 @@
         </div>
 
         <div class="form-group">
-          <label for="exampleInputFile">Foto de Perfil</label>
+          <label>Foto de Perfil</label>
           <div class="input-group">
             <div class="custom-file">
               <input type="file" class="custom-file-input" id="inputFile">
-              <label class="custom-file-label" for="exampleInputFile">Subir Foto</label>
+              <label class="custom-file-label">Subir Foto</label>
             </div>
           </div>
         </div>
